# DisCODe

share/SDK/Component/Example/: CMakeLists.txt  Example.hpp
share/Tasks/: CMakeLists.txt
share/Tasks/EN/: EN_Labyrinth_Camera.xml  EN_Labyrinth_Photo.xml
share/Tasks/MB/: HoughCircles.xml
share/Tasks/MB/delay_tests_irp6p_conveyor/: pb_chessboard_DX-201_scale_1.xml
share/Tasks/MB/visual_servo/: pb_chessboard_DX-201.xml
share/Tasks/MM/: CameraViewer.xml  copylabirynth.xml  labirynth.xml  labirynth2.xml  test_task.xml  visual.xml
src/Processors/CvAdaptiveThreshold/: CMakeLists.txt
src/Processors/CvFindChessboardCorners/: CvFindChessboardCorners_Processor.cpp  CvFindChessboardCorners_Processor.hpp
src/Processors/CvFindLabirynth/: CMakeLists.txt  CvFindLabirynth_Processor.cpp  CvFindLabirynth_Processor.hpp  LReading.hpp
src/Processors/CvHoughCircles/: CMakeLists.txt  CvHoughCircles.cpp  CvHoughCircles.hpp
src/Processors/EN_Labyrinth/: CMakeLists.txt  EN_Labyrinth.cpp  EN_Labyrinth.hpp  EN_Labyrinth_Reading.hpp
src/Processors/TestComponent/: CMakeLists.txt  TestComponent.cpp  TestComponent.hpp
src/Processors/VisualServoPB/: VisualServoPB_Processor.cpp  VisualServoPB_Processor.hpp
src/Proxies/Mrrocpp/: Mrrocpp_Proxy.cpp  Mrrocpp_Proxy.hpp  headers.h
src/Sources/: CMakeLists.txt
src/Types/: CMakeLists.txt
src/Types/Circles/: CMakeLists.txt  Circles.cpp  Circles.hpp
src/Types/Mrrocpp_Proxy/: IBReading.hpp  PBReading.hpp  Reading.hpp
