install(FILES CameraViewer.xml CameraOpenCVViewer.xml MovieViewer.xml MovieWriter.xml MS_Barcode.xml MS_Sign.xml SequenceViewer.xml TriggeredSequenceViewer.xml
  CameraGigEViewer.xml
  RefreshedSequenceViewer.xml
  EN/EN_Labyrinth_Camera.xml
  EN/EN_Labyrinth_Photo.xml
  DESTINATION share/Tasks
  COMPONENT tasks)
